--- a/QuizzApp/QuizzApp.csproj
+++ b/QuizzApp/QuizzApp.csproj
@@ -156,6 +156,7 @@
     </Compile>
     <Compile Include="Models\CertificationModel.cs" />
     <Compile Include="Models\ExamModel.cs" />
+    <Compile Include="Models\ScoreCardModel.cs" />
     <Compile Include="Models\SelectExamModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
