Added Search Certification

--- a/QuizzApp/Web.config
+++ b/QuizzApp/Web.config
@@ -10,7 +10,7 @@
    
   </configSections>
   <connectionStrings>
-    <add name="QuizzesDbEntities" connectionString="metadata=res://*/QuizzAppModel.csdl|res://*/QuizzAppModel.ssdl|res://*/QuizzAppModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=QuizzesDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="QuizzesDbEntities" connectionString="metadata=res://*/QuizzAppModel.csdl|res://*/QuizzAppModel.ssdl|res://*/QuizzAppModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=QuizDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
